# app/controllers/category.controller.js
@@ -11,7 +11,7 @@ exports.findAll = (req, res) => {
     ]
   })
     .then(data => {
-      res.send({data});
+      res.send({ data });
     })
     .catch(err => {
       res.status(500).send({
@@ -21,100 +21,132 @@ exports.findAll = (req, res) => {
     });
 };
 
-exports.findBySlug = (req, res) => {
-  db.category.findOne({
-    where: {
-      slug: req.params.slug
-    },
-    include: [
-      {
-        model: db.sub_category,
-        as: 'subcategories'
-      }
-    ]
-  })
-    .then(async data => {
-      let ids = data.subcategories.map(item => item.id)
-      await db.service.findAll({
-        where: {
-          subcategory_id: {
-            [Op.in]: ids
-          }
-        },
-      }).then(async card => {
-        let idxses = card.map(item => item.id)
-        await db.master.findAll({
-          attributes: {exclude: ['password', 'createdAt', 'updatedAt', 'birthday', 'email']},
-          include: [
-            {
-              model: db.master_services,
-              as: 'services',
-              attributes: {exclude: ['createdAt', 'updatedAt']},
-              where: {
-                service_id: {
-                  [Op.in]: idxses
-                }
-              }
+exports.findBySlug = async (req, res) => {
+  if (req.query.hasOwnProperty("service")) {
+    await db.service.findOne({
+      where: {
+        id: req.query.service
+      },
+    }).then(async card => {
+      await db.master.findAll({
+        attributes: { exclude: ['password', 'createdAt', 'updatedAt', 'birthday', 'email'] },
+        include: [
+          {
+            model: db.master_services,
+            as: 'services',
+            attributes: { exclude: ['createdAt', 'updatedAt'] },
+            where: {
+              service_id: req.query.service
             }
-          ]
-        }).then(service => {
-          data.dataValues.cards = service
-          data.dataValues.filters = {
-            types: ['Мастер', 'Барбер', 'Врач', 'Массажист', 'Косметолог', 'Парикмахер', 'Стилист']
           }
-          res.send({ data });
-        })
+        ]
+      }).then(service => {
+        card.dataValues.cards = service
+        card.dataValues.filters = {
+          types: ['Мастер', 'Барбер', 'Врач', 'Массажист', 'Косметолог', 'Парикмахер', 'Стилист']
+        }
+        res.send({ data: card });
       })
     })
-    .catch(err => {
-      res.status(500).send({
-        message:
-          err.message || "Some error occurred while retrieving products."
-      });
-    });
-};
 
-
-exports.findBySlugSub = (req, res) => {
-  db.sub_category.findOne({
-    where: {
-      slug: req.params.slug
-    }
-  })
-    .then(async data => {
-      await db.service.findAll({
-        where: {
-          subcategory_id: data.id
-        },
-      }).then(async card => {
-        let idxses = card.map(item => item.id)
-        await db.master.findAll({
-          attributes: {exclude: ['password', 'createdAt', 'updatedAt', 'birthday', 'email']},
-          include: [
-            {
-              model: db.master_services,
-              as: 'services',
-              attributes: {exclude: ['createdAt', 'updatedAt']},
-              where: {
-                service_id: {
-                  [Op.in]: idxses
+  } else if (req.query.hasOwnProperty("subcategory")) {
+    db.sub_category.findOne({
+      where: {
+        slug: req.query.subcategory
+      },
+      include: [
+        {
+          model: db.service,
+          as: "services"
+        }
+      ]
+    })
+      .then(async data => {
+        await db.service.findAll({
+          where: {
+            subcategory_id: data.id
+          },
+        }).then(async card => {
+          let idxses = card.map(item => item.id)
+          await db.master.findAll({
+            attributes: { exclude: ['password', 'createdAt', 'updatedAt', 'birthday', 'email'] },
+            include: [
+              {
+                model: db.master_services,
+                as: 'services',
+                attributes: { exclude: ['createdAt', 'updatedAt'] },
+                where: {
+                  service_id: {
+                    [Op.in]: idxses
+                  }
                 }
               }
+            ]
+          }).then(service => {
+            data.dataValues.cards = service
+            data.dataValues.filters = {
+              types: ['Мастер', 'Барбер', 'Врач', 'Массажист', 'Косметолог', 'Парикмахер', 'Стилист']
             }
-          ]
-        }).then(service => {
-          data.dataValues.cards = service
-          data.dataValues.filters = {
-            types: ['Мастер', 'Барбер', 'Врач', 'Массажист', 'Косметолог', 'Парикмахер', 'Стилист']
-          }
-          res.send({ data });
+            res.send({ data });
+          })
         })
       })
-    })
-    .catch(err => {
-      res.status(500).send({
-        message:
-          err.message || "Some error occurred while retrieving products."
+      .catch(err => {
+        res.status(500).send({
+          message:
+            err.message || "Some error occurred while retrieving products."
+        });
       });
-    });
+  } else {
+    db.category.findOne({
+      where: {
+        slug: req.params.slug
+      },
+      include: [
+        {
+          model: db.sub_category,
+          as: 'subcategories'
+        }
+      ]
+    })
+      .then(async data => {
+        let ids = data.subcategories.map(item => item.id)
+        await db.service.findAll({
+          where: {
+            subcategory_id: {
+              [Op.in]: ids
+            }
+          },
+        }).then(async card => {
+          let idxses = card.map(item => item.id)
+          await db.master.findAll({
+            attributes: { exclude: ['password', 'createdAt', 'updatedAt', 'birthday', 'email'] },
+            include: [
+              {
+                model: db.master_services,
+                as: 'services',
+                attributes: { exclude: ['createdAt', 'updatedAt'] },
+                where: {
+                  service_id: {
+                    [Op.in]: idxses
+                  }
+                }
+              }
+            ]
+          }).then(service => {
+            data.dataValues.cards = service
+            data.dataValues.filters = {
+              types: ['Мастер', 'Барбер', 'Врач', 'Массажист', 'Косметолог', 'Парикмахер', 'Стилист']
+            }
+            res.send({ data });
+          })
+        })
+      })
+      .catch(err => {
+        res.status(500).send({
+          message:
+            err.message || "Some error occurred while retrieving products."
+        });
+      });
+  }
 };
